...
                        <barButtonItem image="Search" id="dOl-GF-7qg">
                            <connections>
                                <segue destination="EKU-QU-ihl" kind="presentation" identifier="SearchSegue" modalTransitionStyle="crossDissolve" id="c0A-qT-nAA"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem style="plain" systemItem="flexibleSpace" id="USA-P1-0Qa"/>
                        <barButtonItem image="List" id="Q2v-JC-IKA">
                            <connections>
                                <segue destination="tv5-Ge-XzH" kind="presentation" modalTransitionStyle="crossDissolve" id="dGH-aG-FzP"/>
                            </connections>
                        </barButtonItem>
                    </toolbarItems>
                    <navigationItem key="navigationItem" id="ioF-Tv-v04">
...
                            <constraint firstItem="3sf-T3-YZo" firstAttribute="top" secondItem="Jl3-qj-EvI" secondAttribute="top" id="ICy-pA-ue0"/>
                            <constraint firstItem="3sf-T3-YZo" firstAttribute="leading" secondItem="Jl3-qj-EvI" secondAttribute="leading" id="YbT-Gi-iAT"/>
                            <constraint firstAttribute="trailing" secondItem="3sf-T3-YZo" secondAttribute="trailing" id="h09-RR-k5G"/>
                        </constraints>
                    </view>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="add account" id="u5g-hX-jSk">
                        <barButtonItem key="rightBarButtonItem" title="sign in" id="IVy-u8-kQ4">
                            <connections>
                                <action selector="loginButtonPressed:" destination="Cxf-Qd-xoU" id="syb-oo-m5V"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <nil key="simulatedBottomBarMetrics"/>
...
                            <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                            <connections>
                                <segue destination="dzw-7J-5Ff" kind="show" id="c73-EG-GRX"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem style="plain" systemItem="flexibleSpace" id="6o6-oW-dIU"/>
                        <barButtonItem image="Male" id="3Ta-9I-M1y">
                            <color key="tintColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                            <connections>
                                <action selector="loginButtonTapped:" destination="AYg-o0-LaT" id="tfa-TJ-rpb"/>
                                <segue destination="a2h-mb-3Wm" kind="show" identifier="AccountsSegue" id="aJr-yO-hbO"/>
                            </connections>
                        </barButtonItem>
...
                                </connections>
                            </tableView>
                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hMT-pl-0Ui">
                                <rect key="frame" x="0.0" y="492" width="600" height="44"/>
                                <items>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="jbQ-s0-HBU"/>
                                    <barButtonItem title="logout" id="yov-oE-6nv">
                                        <color key="tintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                        <connections>
                                            <action selector="logoutButtonTapped:" destination="Kaz-dN-C7r" id="gv8-Ve-Mo9"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="JXl-Y3-YL1"/>
...
                                        <rect key="frame" x="0.0" y="113.5" width="600" height="44"/>
                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CLk-6Q-cq6" id="Khm-xB-s5m">
                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="budakikickflip" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cQx-44-W6f">
                                                    <rect key="frame" x="15" y="11" width="361" height="21"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="361" id="gkE-xG-kUf"/>
                                                    </constraints>
                                                    <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="16"/>
                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
