...
    }
    
    func tableView(tableView: UITableView, commitEditingStyle editingStyle: UITableViewCellEditingStyle, forRowAtIndexPath indexPath: NSIndexPath) {
    }
    
    func tableView(tableView: UITableView, editActionsForRowAtIndexPath indexPath: NSIndexPath) -> [UITableViewRowAction]? {
        let deleteAction = UITableViewRowAction(style: UITableViewRowActionStyle.Default, title: "Delete", handler: { (action, indexPath) -> Void in
            
            let user = UserSession.sharedSession.getUsers()![indexPath.row]
            
            if let currentUser = UserSession.sharedSession.currentUser {
                if user.username == currentUser.username {
                    UserSession.sharedSession.logout()
...
